--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project by Aman Yadav</title>
+    <title>Reversify: A Coding Project by Aman Yadav</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,13 +15,16 @@
 
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="img/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100">
 <!-- ==== Nav Section ==== -->
 <nav class="navbar navbar-expand-md navbar-light  fixed-top ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">APP NAME</a>
+        <a class="navbar-brand newFont text-light" href="#">Reversify</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,8 +53,31 @@
 </nav>
 <!-- ==== Main Section ==== -->
 <main class="flex-shrink-0">
-    <div class="container">
-
+    <div class="container mt-5">
+        <div class="row row-cols-1 row-cols-lg-2">
+            <div class="col">
+                <h1 class="display-5 fw-bold lh-1 mb-3">Reversify: A Coding Project</h2>
+                <p class="lead pb-3"> There and back again. A javascript exercise using arrays. Write a program that displays a string in reverse.</p>
+            </div>
+            <div class="col">
+                <h5 class="bordwe-1 border-bottom border-danger">Input A String To Reverse</h5>
+                <form class="row gx-3 gy-2">
+                    <div class="col">
+                        <input type="text" class="from-control" id="userString" placeholder="Input A String" aria-label="Input A String">
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-danger mt-3" id="result">Reverse Me!</button>
+                    </div>
+                    <div class="alert alert-success mt-5 invisible fade show" id="alert" role="alert">
+                        <h4 class="alert-heading">Congrats Your String Has Successfully Reversed!</h4>
+                        <p class="mb-0" id="msg">
+                            <!--Insert A message-->
+                        </p>
+                    </div>
+                </form>
+            </div>
+       
+    </div>
     </div>
 </main>
 <footer class="footer mt-auto py-3">
@@ -80,6 +106,9 @@
 </script>
 
 <script src="js/site.js"></script>
+<script>
+    document.getElementById("result").addEventListener("click",getString);
+</script>
 </body>
 
 </html>
