--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li> <span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
             </ul>
                 <div>
-                    <a type="button" class="btn btn-outline-primary  btn-lg px-4 me-md-2" href="app.html">Try It Out!</a>
+                    <a type="button" class="btn btn-outline-danger  btn-lg px-4 me-md-2" href="app.html">Try It Out!</a>
                 </div>
                 <h5 class="fw-bold mt-5">
                     <div class="d-flex">
